Fix: Add max-width 1280px to wrapper to prevent content from being too wide

--- a/style.scss
+++ b/style.scss
@@ -31,10 +31,9 @@ html, body {
 
 #wrapper {
   margin: 10px auto;
-  box-sizing: border-box;
-  max-width: 100%;
-  padding: 0 var(--site-padding);
   width: 100%;
+  max-width: 1280px;
+  box-sizing: border-box;
   padding: 0 var(--site-padding);
 }
 
